# cdk

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  linker.ld  run_qemu.sh  x86_64-cdk.json
.cargo/: config.toml
.cursor/rules/: project-conventions.mdc  rust-code-quality.mdc
.githooks/: commit-msg  pre-push
.github/workflows/: commit-standards.yml
src/: allocator.rs  capability.rs  console.rs  framebuffer.rs  gdt.rs  heap.rs  interrupts.rs  kernel.rs  lib.rs  main.rs  memory_graph.rs  message.rs  node.rs  object.rs  paging.rs  rng.rs  scheduler.rs  serial.rs  vga_buffer.rs
tools/: install_git_hooks.sh  validate_commit_msg.sh  validate_push_branch.sh
tools/create_disk_image/: Cargo.toml
tools/create_disk_image/src/: main.rs
