[package]
name = "cdk"
version = "0.1.0"
edition = "2021"
description = "Cognitive Distributed Kernel — a bare-metal capability-based OS"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[features]
default = []
std = []

[[bin]]
name = "cdk"
path = "src/main.rs"
required-features = []


[build-dependencies]
bootimage = "0.10"

[dependencies]
# no_std compatible collections
heapless = "0.8"

# Spin locks for no_std
spin = "0.9"

# Volatile memory access
volatile = "0.4"

# Bare-metal only: bootloader entry point + CPU structures + panic handler.
# Excluded from host `cargo test` runs (test cfg implies a host target).
[target.'cfg(not(test))'.dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15", default-features = false, features = [] }
panic-halt = "0.2"

# Cryptographic signing for capabilities (disabled for now - needs RNG)
# ed25519-dalek = { version = "2.0", default-features = false }
# sha2 = { version = "0.10", default-features = false }
# Note: rand/getrandom don't work on bare-metal without custom RNG implementation

# Network support for distributed kernel
# smoltcp = { version = "0.10", default-features = false, features = ["alloc"] }

# Host-only (serde, tempfile, …): not built for `x86_64-unknown-none`. Use
# `tools/create_disk_image` instead of `cargo bootimage` with bootloader 0.11.
[target.'cfg(not(target_os = "none"))'.dependencies]
bootloader = "0.11"