[package]
name = "cdk"
version = "0.1.0"
edition = "2021"
description = "Cognitive Distributed Kernel — a bare-metal capability-based OS"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[features]
default = []
std = []

[[bin]]
name = "cdk"
path = "src/main.rs"
required-features = []


[build-dependencies]
bootimage = "0.10"

[dependencies]
# no_std compatible collections
heapless = "0.8"

# Spin locks for no_std
spin = "0.9"

# Volatile memory access
volatile = "0.4"

# Bare-metal only: bootloader entry point, CPU structures, panic handler.
# These are compiled for the kernel binary (x86_64-unknown-none).
# When running `cargo test` pass the host target explicitly, e.g.:
#   cargo test --target x86_64-apple-darwin   (macOS)
#   cargo test --target x86_64-unknown-linux-gnu  (Linux)
[target.'cfg(target_os = "none")'.dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
panic-halt = "0.2"

# Cryptographic signing for capabilities (disabled for now - needs RNG)
# ed25519-dalek = { version = "2.0", default-features = false }
# sha2 = { version = "0.10", default-features = false }
# Note: rand/getrandom don't work on bare-metal without custom RNG implementation

# Network support for distributed kernel
# smoltcp = { version = "0.10", default-features = false, features = ["alloc"] }

# The `bootloader` crate (disk image builder) lives in tools/create_disk_image/
# and is NOT a dependency of the kernel crate itself.