[package]
name = "cdk"
version = "0.1.0"
edition = "2021"
description = "Cognitive Distributed Kernel — a bare-metal capability-based OS"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[features]
default = []
std = []

[[bin]]
name = "cdk"
path = "src/main.rs"
required-features = []

[build-dependencies]
bootimage = "0.10"

[dependencies]
# no_std compatible collections
heapless = "0.8"
linked_list_allocator = { version = "0.10.6", default-features = false }

# Spin locks for no_std
spin = "0.9"

# Volatile memory access
volatile = "0.4"

# Cryptographic signing for capabilities.
# ed25519-dalek: no_std; rand_core feature enables SigningKey::generate().
# sha2: no_std digest used to build the signable message.
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core"] }
sha2 = { version = "0.10", default-features = false }

# rand_core on host includes getrandom (OsRng); bare-metal uses traits only.
[target.'cfg(not(target_os = "none"))'.dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

# Bare-metal only: bootloader entry point, CPU structures, panic handler.
# When running `cargo test` pass the host target explicitly, e.g.:
#   cargo test --target aarch64-apple-darwin  (Apple Silicon macOS)
#   cargo test --target x86_64-unknown-linux-gnu  (Linux)
[target.'cfg(target_os = "none")'.dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
panic-halt = "0.2"
rand_core = { version = "0.6", default-features = false }

# Network support for distributed kernel
# smoltcp = { version = "0.10", default-features = false, features = ["alloc"] }

# The `bootloader` crate (disk image builder) lives in tools/create_disk_image/
# and is NOT a dependency of the kernel crate itself.
